# Rustle

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/macos/AppIcon.icon/: icon.json
aur/: .SRCINFO  PKGBUILD
aur-bin/: .SRCINFO  PKGBUILD
src/: api.rs  app.rs  audio.rs  cache.rs  database.rs  features.rs  i18n.rs  main.rs  platform.rs  ui.rs  utils.rs
src/api/: ncm.rs  ncm_api.rs
src/api/ncm_api/: encrypt.rs  model.rs
src/app/: helpers.rs  message.rs  state.rs  update.rs  view.rs
src/app/update/: database.rs  discover.rs  import.rs  keyboard.rs  lyrics.rs  mpris.rs  navigation.rs  ncm.rs  page_loader.rs  playback.rs  player_controller.rs  playlist.rs  preload.rs  preload_manager.rs  queue.rs  queue_navigator.rs  search.rs  settings.rs  song_resolver.rs  tray.rs  window.rs
src/audio/: analyzer.rs  chain.rs  equalizer.rs  events.rs  fade.rs  handle.rs  player.rs  streaming.rs  thread.rs
src/database/: models.rs  ops.rs  repository.rs  schema.rs
src/database/ops/: history.rs  playback.rs  playlists.rs  queue.rs  songs.rs
src/features/: import.rs  keybindings.rs  lyrics.rs  media.rs  mpris.rs  settings.rs  tray.rs
src/features/import/: cover.rs  encoding.rs  metadata.rs  progress.rs  scanner.rs  watcher.rs
src/features/lyrics/: engine.rs  parser.rs
src/features/lyrics/engine/: conversion.rs  gpu_pipeline.rs  interlude_dots.rs  layout.rs  lens.rs  line_animation.rs  per_line_blur.rs  physics.rs  pipeline.rs  program.rs  sdf_cache.rs  sdf_generator.rs  spring.rs  text_shaper.rs  types.rs  vertex.rs  word_splitter.rs
src/features/lyrics/engine/shaders/: interlude_dots.wgsl  layer_composite.wgsl  lyrics_composite.wgsl  lyrics_sdf.wgsl
src/features/lyrics/parser/: ass.rs  eslrc.rs  lrc.rs  lys.rs  online.rs  qrc.rs  ttml.rs  types.rs  yrc.rs
src/features/media/: cover.rs  lyrics.rs
src/i18n/: en.rs  zh.rs
src/platform/: keybindings.rs  media_controls.rs  theme.rs  tray.rs  window.rs
src/platform/media_controls/: linux.rs  souvlaki_impl.rs
src/platform/tray/: linux.rs  windows.rs
src/platform/window/: linux.rs  macos.rs  windows.rs
src/ui/: animation.rs  components.rs  effects.rs  icons.rs  pages.rs  primitives.rs  theme.rs  widgets.rs
src/ui/animation/: hover.rs  prelude.rs
src/ui/components/: carousel_banner.rs  delete_playlist_dialog.rs  edit_dialog.rs  exit_dialog.rs  importing_card.rs  login_popup.rs  player_bar.rs  playlist_grid.rs  playlist_view.rs  queue_panel.rs  search_bar.rs  sidebar.rs  sidebar_resize_handle.rs  trending_list.rs  window_controls.rs
src/ui/effects/: background.rs  image_processing.rs  mesh.rs  textured_background.rs
src/ui/pages/: audio_engine.rs  discover.rs  home.rs  lyrics.rs  playlist.rs  search.rs  settings.rs
src/ui/primitives/: progress_ring.rs  square_cover.rs  virtual_list.rs
src/ui/widgets/: multi_track_slider.rs  play_mode_button.rs  playback_controls.rs  playlist_card.rs  progress_slider.rs  section_header.rs  toast.rs  vertical_slider.rs
